--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/mavoweb/mavue#readme",
   "devDependencies": {
     "markdown-it-anchor": "^8.6.6",
+    "markdown-it-attrs": "^4.1.6",
     "postcss": "^8.3.9",
     "postcss-cli": "^9.0.1",
     "postcss-nesting": "^8.0.1"
