--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "npm run build:html && npm run build:css",
     "watch:css": "npx postcss \"**/*.postcss\" --base . --dir . --ext .css --config postcss.config.cjs --watch",
     "watch:html": "npx @11ty/eleventy --config=.eleventy.cjs --watch",
-    "watch": "npm run watch:css & npm run watch:html"
+    "watch": "npm run watch:css & npm run watch:html",
+    "dev": "http-server -p 52732 --cors"
   },
   "repository": {
     "type": "git",
